<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_layout"
        layout="@layout/title_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Widget.Theme.Email.hvBoldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hv_34dp"
        android:text="@string/account_setup_title"
        android:textSize="@dimen/hv_31sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hv_134dp"
        android:layout_marginTop="@dimen/hv_46dp"
        android:layout_marginEnd="@dimen/hv_134dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.Theme.Email.hv17TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/account_setup_done_tips_text" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.Theme.Email.hv17TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/hv_14dp"
            android:text="@string/account_setup_done_account_text" />

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/Widget.Theme.Email.hv17EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hv_14dp"
            android:hint="@string/account_setup_done_account_hint_text"
            android:paddingStart="@dimen/hv_17dp"
            android:paddingTop="@dimen/hv_15dp"

            android:paddingEnd="@dimen/hv_17dp"
            android:paddingBottom="@dimen/hv_15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hv_134dp"
        android:layout_marginTop="@dimen/hv_46dp"
        android:layout_marginEnd="@dimen/hv_134dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.Theme.Email.hv17TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/account_setup_done_display_name_text" />

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/Widget.Theme.Email.hv17EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hv_14dp"
            android:hint="@string/account_setup_done_display_name_hint_text"
            android:paddingStart="@dimen/hv_17dp"
            android:paddingTop="@dimen/hv_15dp"
            android:paddingEnd="@dimen/hv_17dp"
            android:paddingBottom="@dimen/hv_15dp" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_done"
        style="@style/Widget.Theme.Email.hv17Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hv_185dp"
        android:layout_marginTop="@dimen/hv_46dp"
        android:layout_marginEnd="@dimen/hv_185dp"
        android:text="@string/common_button_done" />

</LinearLayout>